Fix about me overflow by using 'overflow: auto' in css

--- a/project/static/css/styles.css
+++ b/project/static/css/styles.css
@@ -41,7 +41,7 @@ textarea {
 }
 
 .panel-body {
-    word-break: break-word;
+    overflow: auto;
 }
 
 /* --------------------------- Horizontal scrolling field */
